--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Login</title>
-  </head>
-  <body>
-    <div>
-      <form action="">
-        <label for="user">Nombre de usuario: </label>
-        <input type="text" name="user" id="user" />
-        <label for="password"></label>
-        <input type="password" name="password" id="password" />
-      </form>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Form Login</title>
+</head>
+
+<body>
+  <div>
+    <form action="">
+      <label for="user">Nombre de usuario: </label>
+      <input type="text" name="user" id="user" />
+      <label for="password">Contraseña:</label>
+      <input type="password" name="password" id="password" />
+      <input type="submit" value="Enviar">
+    </form>
+  </div>
+</body>
+
 </html>
